--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
-<html>
-    <head>
-        <title>Task Manager</title>
-    </head>
-    <body>
-        <h1>{{ current_title }}</h1>  <!-- Flask replaces {{ current_title }} with the value of current_title passed from the index() function.-->
-        <p>Some content</p>
-    </body>
-</html>
+{% extends "base.html" %} {% block main %} {% for task in tasks %}
+<div class="card">
+  <div class="card-body">
+    <h3>{{ task.title }}</h3>
+    <p>Added on {{ task.date }}</p>
+    <a href="#" class="btn btn-primary">Edit</a>
+    <a href="#" class="btn btn-danger">Delete</a>
+  </div>
+</div>
+{% endfor %} {% endblock %}
